--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="utf-8">
+    <meta charset=" ISO-8859-1">
     <title>My test page</title>
   </head>
   <body>
       <h1>Hello word</h1>
     <p>This is <strong>my </strong> page</p>
+    <p>Japanese example: ご飯が熱い。</p>
     <p>This is 
     <a href="uit.edu.vn" title="UIT home page" target="_blank">UIT home page</a>
     </p>
